[workspace]
members = [
    # net
    "net/moople_net",
    "net/moople_derive",
    "net/moople_packet",

    # Data
    "data/re-wz",

    # client
    "client/moople_launchar",

    # server
    "server/proto95",
    "server/login",
    "server/game",
    "server/services",
    "server/mono",
    "server/data",
    "server/data/migration",
]
exclude = ["client/moople_hook"]