[workspace]
members = [
    # net
    "net/moople_net",
    "net/moople_derive",
    "net/moople_packet",

    # Data
    "data/re-wz",
    "data/re-wz-ui",
    "data/game_data",

    # client
    "client/moople_launchar",

    # server
    "server/shrooming",
    "server/proto95",
    "server/login",
    "server/game",
    "server/mono",
    "server/data",
    "server/data/migration",

    # util
    "util/packet_tracer"
]
exclude = ["client/moople_hook","client/moople_ffi"]