[package]
name = "game_data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

[[bin]]
name = "gen-files"
path = "src/bin/gen_files.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
convert_case = "0.6.0"
flatbuffers = "23.1.21"
glob = "0.3.1"
quick-xml = "0.27"
quote = "1.0.25"
rayon = "1.7.0"
serde = { version = "1.0.154", features = ["derive"] }
serde-generate = "0.25.0"
serde-reflection = "0.3.6"
serde_json = "1.0.94"
string-interner = "0.14.0"
