[package]
name = "re_wz"
version = "0.1.0"
edition = "2021"

[features]
default = []
mmap = ["memmap2"]

[dependencies]
aes = "0.8.2"
anyhow = "1.0.68"
binary-layout = "3.1.3"
binrw = "0.11"
bytemuck = "1.13.0"
deflate = "1.0.0"
id_tree = "1.8.0"
image = "0.24.5"
itoa = "1.0.5"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
memmap2 = { version = "0.5.10", optional = true }
log = "0.4.17"
