[package]
name = "moople_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moople_packet = { version = "0.1.0", path = "../moople_packet" }
aes = "0.8.1"
anyhow = "1.0.56"
array-init = "2.1.0"
arrayvec = "0.7.2"
bytemuck = "1.12.3"
bytes = "1.1.0"
chrono = "0.4.23"
cipher = { version = "0.4.3", features = ["block-padding"] }
dashmap = "5.4.0"
either = "1.8.0"
enumflags2 = "0.7.5"
futures = "0.3.21"
hybrid-array = "0.1.0"
num_enum = "0.5.7"
ofb = "0.6.1"
packed_struct = "0.10.1"
pretty-hex = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.7.1", features = ["codec"] }
tower = {version = "0.4.12", features = ["full"] }
tower-service = "0.3.1"
