[package]
name = "moople_packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
array-init = "2.1.0"
arrayvec = "0.7.2"
bytes = "1.4.0"
chrono = "0.4.23"
either = "1.8.1"
num_enum = "0.5.9"
packed_struct = "0.10.1"
pretty-hex = "0.3.0"
thiserror = "1.0.38"
bitflags = "2"
bytemuck = "1.13.1"
geo = "0.24.0"
paste = "1.0.12"
