[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
either = "1.8.1"
enum-map = "2.4.2"
futures = "0.3.26"
moople_packet = { version = "0.1.0", path = "../../net/moople_packet" }
proto95 = { version = "0.1.0", path = "../proto95" }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros" ]}
tokio = { version = "1", features = ["rt", "macros"] }
