[package]
name = "mono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
array-init = "2.1.0"
async-trait = "0.1.64"
clap = { version = "4.1.8", features = ["derive"] }
data = { version = "0.1.0", path = "../data" }
game = { version = "0.1.0", path = "../game" }
log = "0.4.17"
login = { version = "0.1.0", path = "../login" }
moople_net = { version = "0.1.0", path = "../../net/moople_net" }
pretty_env_logger = "0.4.0"
tokio = "1.25.0"
uuid = "1.3.0"
