[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
arrayvec = "0.7.2"
bcrypt = "0.14.0"
chrono = "0.4.23"
constant_time_eq = "0.2.4"
dashmap = "5.4.0"
data = { version = "0.1.0", path = "../data" }
enum-map = "2.4.2"
itertools = "0.10.5"
log = "0.4.17"
moople_packet = { version = "0.1.0", path = "../../net/moople_packet" }
num_enum = "0.5.11"
parking_lot = "0.12.1"
proto95 = { version = "0.1.0", path = "../proto95" }
rand = "0.8.5"
sea-orm = "0.11.0"
thiserror = "1.0.38"
tokio = { version = "1", features = ["rt", "macros"] }
