[package]
name = "shrooming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
async-stream = "0.3.4"
tokio-util = { version = "0.7.7", features = ["io"] }
tokio-stream = "0.1.12"

[build-dependencies]
tonic-build = "0.8"
