[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3.26"

[dependencies.sea-orm-migration]
version = "^0.11.0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
  "sqlx-postgres",
]
